# dnsjax

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  __init__.py  __main__.py  allocators.py  bench.py  dns.py  dnsbox_to_dnsjax.ipynb  fft.py  main.py  operators.py  parameters.py  parameters.toml  prek.toml  pyproject.toml  rhs.py  sharding.py  stats.py  timestep.py  transform.py  velocity.py  vfield.py
src/dnsjax/: __main__.py  bench.py  fd.py  fft.py  operators.py  parameters.py  rhs.py  sharding.py  timestep.py  velocity.py
src/dnsjax/flows/: monochromatic.py  pipe.py  plane_channel.py  plane_couette.py  triply_periodic.py
src/dnsjax/geometries/: __init__.py  cartesian.py  triply_periodic.py
tests/: test_banded_solver.py
