[project]
name = "dnsjax"
version = "0.1.0"
description = "A GPU-accelerated & parallelized pseudo-spectral solver for direct numerical simulations of Navier–Stokes equations in JAX."
authors = [
    { name = "Gökhan Yalnız", email = "gokhan.yalniz@ista.ac.at" }
]
requires-python = ">=3.14"
dependencies = [
    "jax[cuda13]>=0.9.2",
    "pydantic-settings>=2.13.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.0",
]

[project.scripts]
dnsjax = "dnsjax:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
